# dirtywork

./: 00_About_Ada_Used_to_get_Time_Responses.docx  01_Practica_Sincronizacion_y_Administracion_de_Procesos.docx  02_Pista_o_Ayuda_para_01_Practica.docx  03_Practica_Threads_a_Nivel_de_Usuario.docx  09_Signals_and_Signal_Processing.docx  15.7_SMP_y_Sistemas_Operativos_en_Tiempo_Real.docx  20201002_SOTR.tar  5.11_Sh_Simple_for_Command_Execution.docx  About_the_Format_a_dot_out.docx  Ambiente_de_ejecucion_de_la_CPU_x86_en_modo_protegido.docx  Apt-and-unmet-dependencies.docx  C_no_es_un_lenguaje_inherentemente_portable.docx  Codificando_Maquinas_de_Estado_Jerarquicas.docx  Codificando_Maquinas_de_Estado_Jerarquicas_1.docx  Comandos_WGET_para_Descargar_Archivos_de_REPOS_de_github.docx  Construccion_y_ejecuacion_del_SO_xv6.docx  Construccion_y_ejecucion_del_MaRTE_OS.docx  Construccion_y_ejecucion_del_SO_xv6.docx  Ejercicio_Practico_MTX_5_1.docx  Herencia_Simple_en_C.docx  How_to_find_Files_by_Size.docx  MAKEFILE_GRUB_Legacy.tar  MTX4_0.tar  MTX4_1.tar  MTX4_2.tar  MTX4_3.tar  MTX4_4.tar  MTX4_5.tar  MTX5_0.tar  MTX5_1.tar  MTX5_2.tar  MTX_Chapter_08.docx  Modificaciones_para_ocera_1.0.0_diag_emdebsys_diag_Makefile.txt  Multitasking_on_CPU_x86__SKELIX_OS_Tut_06.docx  NOTA_MaRTE_OS.txt  Nota_20200205_para_la_Construccion_de_tcc.txt  P02_Conociendo_el_Entorno_de_un_Sistema_Operativo_en_Tiempo_Real.docx  P03_Creacion_de_Procesos.docx  P11_Algoritmos_de_Planificacion.docx  Para_Construir_y_ejecutar_xv6.txt  (+20 more)
00_Proc_de_Evaluacion/: url_pag_de_Edmodo.txt  (+1 more)
UNIDAD00/12_Autotools/UN_EJEMPLO_uso_de_Autoconf/: LEEME.txt  configure.ac  configure.ac.orig  ejemplo.m4
UNIDAD00/12_Autotools/UN_EJEMPLO_uso_de_Autoconf/autom4te.cache/: output.0  requests  traces.0
UNIDAD00/12_Autotools/UN_EJEMPLO_uso_de_Autoconf/testing/: config.status  configure  configure.in
UNIDAD00/12_Autotools/UN_EJEMPLO_uso_de_Autoconf/testing/00_Reproducing_the_error/: configure  configure.in
UNIDAD00/12_Autotools/UN_EJEMPLO_uso_de_Autoconf/testing/00_Reproducing_the_error/autom4te.cache/: output.0  requests  traces.0
UNIDAD00/12_Autotools/UN_EJEMPLO_uso_de_Autoconf/testing/01/: config.status  configure  configure.ac
UNIDAD00/12_Autotools/UN_EJEMPLO_uso_de_Autoconf/testing/01_1_AC_LANG_PROGRAM/: configure  configure.ac
UNIDAD00/12_Autotools/UN_EJEMPLO_uso_de_Autoconf/testing/01_1_AC_LANG_SOURCE/: config.status  configure  configure.ac
UNIDAD00/12_Autotools/UN_EJEMPLO_uso_de_Autoconf/testing/autom4te.cache/: output.1  requests  traces.0  traces.1
(+1253 files in other folders)
